--- a/src/Styles.scss
+++ b/src/Styles.scss
@@ -137,6 +137,9 @@ main {
           border-radius: 8px;
           padding-left: 15px;
           margin: 10px 0 30px 0;
+          &::-webkit-inner-spin-button {
+            appearance: none;
+          }
 
           &::placeholder {
             color: $Light-grayish-violet;
@@ -163,7 +166,8 @@ main {
           }
 
           &:active {
-            transform: translateY(1px);
+            background-color: $Very-dark-violet;  
+            transition: 0.2s ease;
           }
         }
       }
