--- a/src/Styles.scss
+++ b/src/Styles.scss
@@ -114,6 +114,33 @@ main {
           font-size: 0.95rem;
           color: $Very-dark-violet;
           letter-spacing: 2px;
+          margin-bottom: 10px;
+        }
+
+        .name-section {
+          display: flex;
+          flex-direction: column;
+          position: relative;
+
+          .err {
+            position: absolute;
+            top: 90px;
+            color: red;
+            font-size: 0.9rem;
+          }
+        }
+
+        .card-number-section {
+          display: flex;
+          flex-direction: column;
+          position: relative;
+
+          .err {
+            position: absolute;
+            top: 90px;
+            color: red;
+            font-size: 0.9rem;
+          }
         }
 
         .rest {
@@ -123,9 +150,18 @@ main {
 
           .date-section {
             width: 100%;
+            position: relative;
+
             .date-inputs {
               display: flex;
               gap: 10px;
+            }
+
+            .err {
+              position: absolute;
+              top: 90px;
+              color: red;
+              font-size: 0.9rem;
             }
           }
         }
@@ -133,16 +169,20 @@ main {
         input {
           all: unset;
           height: 50px;
-          border: 1px solid $Light-grayish-violet;
+          border: 2px solid $Light-grayish-violet;
           border-radius: 8px;
           padding-left: 15px;
-          margin: 10px 0 30px 0;
+          margin-bottom: 30px;
           &::-webkit-inner-spin-button {
             appearance: none;
           }
 
           &::placeholder {
             color: $Light-grayish-violet;
+          }
+
+          &:focus {
+            border: 2px solid $Dark-grayish-violet;
           }
         }
 
@@ -166,7 +206,7 @@ main {
           }
 
           &:active {
-            background-color: $Very-dark-violet;  
+            background-color: $Very-dark-violet;
             transition: 0.2s ease;
           }
         }
