--- a/src/Styles.scss
+++ b/src/Styles.scss
@@ -120,6 +120,7 @@ main {
           color: red;
           font-size: 0.8rem;
           height: 1rem;
+          margin-top: 2px;
         }
 
         input {
